--- a/preci-app/src/app/profile/profile.page.scss
+++ b/preci-app/src/app/profile/profile.page.scss
@@ -63,6 +63,7 @@
 
 .login-section {
   padding: var(--preci-space-4);
+  padding-bottom: calc(var(--preci-tab-height, 56px) + var(--ion-safe-area-bottom, 0px) + 36px);
 }
 
 // Theme toggle segmented control
