--- a/preci-app/src/app/search/search.page.scss
+++ b/preci-app/src/app/search/search.page.scss
@@ -110,6 +110,7 @@
   flex-direction: column;
   gap: var(--preci-space-2);
   padding: var(--preci-space-2) var(--preci-space-4);
+  padding-bottom: calc(var(--preci-tab-height, 56px) + var(--ion-safe-area-bottom, 0px) + 36px);
 }
 
 .skeleton-list {
